<resources>
    <string name="app_name">ComicCollector</string>
    <string name="app_description">ComicCollector is a Android game were the user collects cards depicting comic characters.</string>

    <string name="geofence_service_description">The service is used by the app Comic Collector to obtain cards when the user get sufficiently close to a map collectable.</string>

    <string name="drawer_header_string">ComicCollector</string>
    <string name="drawer_item_map_string">Map</string>
    <string name="drawer_item_collection_string">Collection</string>
    <string name="drawer_item_achievements_string">Achievements</string>
    <string name="drawer_item_about_string">About</string>

    <string name="drawer_open_description">Open drawer</string>
    <string name="drawer_close_description">Close drawer</string>

    <string name="toolbar_title_map">ComicCollector</string>
    <string name="toolbar_title_collection">Collection</string>
    <string name="toolbar_title_achievements">Achievements</string>
    <string name="toolbar_title_about">About</string>

    <string name="toolbar_map_new_geofences_string">New cards</string>
    <string name="toolbar_collection_search_string">Search</string>
    <string name="toolbar_collection_sort_string">Sort</string>
    <string name="toolbar_achievements_sort_string">Sort</string>

    <string name="collection_marvel_banner_string">Data provided by Marvel. © 2014 Marvel</string>
    <string name="character_details_marvel_banner_string">Click here for more info on character\nData provided by Marvel. © 2014 Marvel</string>

    <string name="collection_recycler_item_image_description">An image of a character.</string>

    <string name="character_description_header_string">Description</string>
    <string name="character_appearances_header_string">Appears in</string>
    <string name="character_card_conditions_header_string">Card(s) found</string>
    <string name="character_first_found_header_string">First card found</string>

    <string name="achievement_status_incomplete_string">Not completed</string>
    <string name="achievement_status_complete_string">Completed</string>

    <string name="achievement_description_header_string">Description</string>
    <string name="achievement_difficulty_header_string">Difficulty</string>
    <string name="achievement_status_header_string">Status</string>

    <string name="about_description">Created by Viktor Sieger\n\nVersion 1.1</string>

    <string name="error_location_permission">Location permission is needed to run the game</string>
    <string name="error_location_setting">Location setting need to be enabled to run the game</string>
    <string name="error_location_failed">Could not get location</string>
    <string name="error_api_response">Error in response</string>

    <string name="alert_internet_message_string">The app needs internet access to function properly.</string>
    <string name="alert_internet_positive_button_string">OK</string>
    <string name="alert_location_message_string">Location permission is needed to pinpoint your position. Your position is used to set the gaming environment.</string>
    <string name="alert_location_positive_button_string">OK</string>

    <string name="card_found_string">You found a card!</string>
</resources>
